tests/sumo/extended/calibrator/errors/vClass_mismatch_ignore/errors.sumo
Warning: Vehicle 'cali.0.0' is not allowed to depart on any lane of its first edge.
Warning: Vehicle 'cali.0.0' is not allowed to depart on any lane of its first edge.
Warning: Vehicle 'cali.0.1' is not allowed to depart on any lane of its first edge.
Warning: Vehicle 'cali.0.2' is not allowed to depart on any lane of its first edge.
Warning: Vehicle 'cali.0.3' is not allowed to depart on any lane of its first edge.
Warning: Vehicle 'cali.0.3' is not allowed to depart on any lane of its first edge.
